feat: Prepare 0.x for sharing plugins with 1.x (#4384)
* new wrapper

* swap core for core-plugin-v1

* implement methods/properties

* set return type

* adjust types

* import  coreTruncateToCompleteSentence

* had gpt fix it up

* fix messages typo

* revert setting return type to keep typescript happy

* fix typo in registerAdapter

* coreGetEnvVariable

* fix: resolve type error in EternalAI fetch handler

modified the EternalAI implementation to pass chain_id in the prompt
instead of using a custom fetch wrapper, which was causing type errors
during build

* fix: resolve linter errors in bootstrap plugin continue handler

fixed type errors and code formatting issues in the continue action
handler to ensure proper build compatibility

* script to migrate core => core-plugin-v1

* add json5

* read metadata, become 1.x aware by checking remote branch

* bump

* refactor out migratePlugin and make buildPluginFromDir

* adjust logging

* have to be specific about npm name, enable source code compatiblity migration, isPluginInstalled refactor to getInstalledPackages()

* additional clean up (removing dead comments)

---------

Co-authored-by: yung algorithm <113615973+yungalgo@users.noreply.github.com>

--- a/packages/core-plugin-v1/package.json
+++ b/packages/core-plugin-v1/package.json
@@ -1,6 +1,7 @@
 {
-    "name": "@elizaos/plugin-bootstrap",
+    "name": "@elizaos/core-plugin-v1",
     "version": "0.25.9",
+    "description": "",
     "type": "module",
     "main": "dist/index.js",
     "module": "dist/index.js",
@@ -18,20 +19,26 @@
     "files": [
         "dist"
     ],
-    "dependencies": {
-        "@elizaos/core-plugin-v1": "workspace:*"
-    },
-    "devDependencies": {
-        "@types/node": "^22.10.5",
-        "tsup": "8.3.5"
-    },
     "scripts": {
         "build": "tsup --format esm --dts",
+        "watch": "tsc --watch",
         "dev": "tsup --format esm --dts --watch",
-        "test": "vitest run"
+        "build:docs": "cd docs && pnpm run build",
+        "test": "vitest run",
+        "test:coverage": "vitest run --coverage",
+        "test:watch": "vitest"
     },
-    "peerDependencies": {
-        "whatwg-url": "7.1.0"
+    "author": "",
+    "license": "MIT",
+    "devDependencies": {
+        "@types/node": "22.8.4",
+        "tsup": "8.3.5",
+        "typescript": "5.6.3"
+    },
+    "dependencies": {
+        "@elizaos/core": "workspace:*",
+        "ai": "4.1.54",
+        "pino": "^9.6.0"
     },
     "publishConfig": {
         "access": "public"
