--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -12,7 +12,8 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
-        "axios": "^1.8.1",
-        "commander": "^13.1.0"
+        "commander": "^13.1.0",
+        "json5": "2.2.3",
+        "axios": "^1.8.1"
     }
 }
